--- a/angular.json
+++ b/angular.json
@@ -28,8 +28,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
-              "src/assets/styles/theme.scss"
+              "src/assets/app.scss"
             ],
             "scripts": []
           },
