--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~10.1.2",
     "@angular/compiler": "~10.1.2",
     "@angular/core": "~10.1.2",
+    "@angular/fire": "^6.1.4",
     "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "~10.1.2",
     "@angular/material": "^10.2.7",
@@ -24,6 +25,7 @@
     "@angular/router": "~10.1.2",
     "@ngx-gallery/core": "^5.0.0-beta.0",
     "@swimlane/ngx-charts": "^16.0.0",
+    "firebase": "^8.2.1",
     "ng-gallery": "^5.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
